<resources>
    <string name="google_maps_key"></string>
    <string name="facebook_app_id"></string>


    <string name="menu_add_contact">Adicionar Contato</string>
    <string name="menu_edit_info">Editar Nome</string>
    <string name="menu_view_dht">Ver rede DHT</string>
    <string name="menu_reconnect">Reconectar à rede</string>
    <string name="menu_direct_connection">Conexão direta</string>

    <string name="menu_sign_key">Assinar certificado</string>
    <string name="menu_trusted">Confiavel</string>

    <string name="contact_name">Nome do Contato</string>
    <string name="contact_ip_address">Endereço IP</string>
    <string name="contact_port">Porta</string>

    <!--DIALOG MESSAGES-->
    <string name="progress_dialog_standard_msg">Aguarde um momento.</string>
    <string name="connection_failed_dialog_tittle">Erro na conexão</string>
    <string name="connection_failed_dialog_msg">Não foi possível se conectar com esse endereço</string>

    <!--NETWORK ERRORS-->
    <string name="network_error_timeout">Erro inesperado, por favor tente novamente.</string>
    <string name="network_error_without_connection">Rede indisponível.</string>
    <string name="network_error_unknown">Erro desconhecido, não foi possível completar sua requisição.</string>

    <!--PLACEHOLDERS LABELS-->
    <string name="placeholder_empty_label">Não existem resultados.</string>
    <string name="placeholder_error_label">Houve um erro inesperado.</string>
    <string name="placeholder_error_button_label">Tentar novamente</string>

    <!--AppTextInputLayout DEFAULT FEEDBACKS-->
    <string name="apptextinputlayout_invalid_field">Campo %s inválido.</string>
    <string name="apptextinputlayout_empty_field">Campo %s não pode estar vazio.</string>
    <string name="apptextinputlaoyut_password_field">A %1$s não pode conter menos de %2$d caracteres.</string>

    <string name="contact_trust_title">Os seguintes contatos confiam em %s</string>
    <string name="contact_trust_check">Eu confio em %s. </string>


</resources>
